<resources>
    <string name="app_name">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reviews">Reviews</string>
    <string name="noReviews">No Reviews on this movie yet.</string>
    <string name="areYouSureYouWantToRate">Please rate this movie </string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="pleaseSelectValue">Please Select value</string>
    <string name="popularMovies">Popular Movies</string>
    <string name="areYouSureYouWantToFav">Are you sure you want to add this movie to favourites?</string>
    <string name="areYouSureYouWantToUnFav">Are you sure you want to remove this movie to favourites?</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="favourites">Favourites</string>
</resources>